--- a/src/main/resources/templates/searchedPage.html
+++ b/src/main/resources/templates/searchedPage.html
@@ -639,7 +639,9 @@
     <div class="card" id="cardArea" th:each="post, postIndex : ${posts}">
       <div class="card-body" style="text-align: left;">
         <a th:href="@{/api/posts/{postId}(postId=${post.id})}">
-          <h5 class="card-title" th:text="${post.title}"> 스터디원 구함 </h5>
+          <h5 class="card-title"
+              th:text="|${post.title.length() > 15 ? #strings.substring(post.title, 0, 15) + '...' : post.title}|">
+            스터디원 구함 </h5>
           <h6 class="card-subtitle mb-3 text-body-secondary"
               th:text="|View : ${post.view_cnt}|">
             View: 15</h6>
@@ -648,7 +650,12 @@
           >Some quick example text to build on the card title ...</p>
         </a>
         <p class="card-link" style="
-                margin: revert; text-align: right; margin-top: 95%;"
+                margin: revert;
+                /* text-align: right; */
+                /* margin-top: 90%; */
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-end;"
            th:text="|${post.nickname}|">sally</p>
         <p class="card-link" style="
     font-size: small;
@@ -741,6 +748,19 @@
     // 게시글 생성 페이지로 이동
     window.location.replace("/api/post-page");
   });
+
+  //titlecontaing 검색
+  function searchByTitle() {
+    // 검색어 가져오기
+    const currentURL = new URL(window.location.href);
+    const category = currentURL.pathname.split('/')[4]; // 주소창에서 category값 받아오기
+    const searchInput = document.getElementById("search-input").value;
+    console.log(category);
+
+    // 검색 결과 페이지로 이동
+    window.location.replace("/api/posts/categories/" + category + "/titles?title=" + searchInput);
+  }
+
 
   // header js 코드 추가
   $(document).ready(function () {
