--- a/src/main/resources/templates/boards.html
+++ b/src/main/resources/templates/boards.html
@@ -439,6 +439,15 @@
             border-color: #e6e6e6;
         }
 
+        .mark-all-read-button {
+            position: absolute;
+            top: 10px; /* 버튼 위치 조정 */
+            right: 10px; /* 버튼 위치 조정 */
+            padding: 1px 4px;
+            font-size: 12px;
+            z-index: 9999; /* 다른 요소보다 앞에 표시되도록 설정 */
+        }
+
     </style>
 </head>
 <body>
@@ -883,8 +892,33 @@
             });
             const listHeader = document.createElement('div');
             listHeader.className = 'notification-list-header';
-            listHeader.innerText = '알림';
+
+            // Create the "전체 읽음" button
+            const markAllReadButton = `
+        <button id="markAllReadButton" class="mark-all-read-button">전체 읽음</button>
+    `;
+            listHeader.innerHTML = markAllReadButton; // innerHTML로 버튼 추가
+            listHeader.innerHTML += '알림';
+
             notificationList.insertBefore(listHeader, notificationList.firstChild);
+
+            // "전체 읽음" 버튼에 이벤트 리스너 연결
+            const button = document.getElementById('markAllReadButton');
+            button.addEventListener('click', function() {
+                const confirmResult = confirm('알림 전체 읽음처리 하시겠습니까?');
+                if (confirmResult) {
+                    // 확인을 선택한 경우 서버에 요청 보내기
+                    markAllNotificationsAsRead();
+                    // alert('알림이 전체 읽음 처리되었습니다.');
+                    window.location.href = window.location.href;
+                } else {
+                    // 취소를 선택한 경우
+                    // 아무 작업도 하지 않음
+                }
+
+            });
+
+
         };
 
         // 현재 시간과 주어진 시간 사이의 경과 시간을 계산하여 문자열로 반환하는 함수
@@ -978,6 +1012,18 @@
             };
         });
 
+        // 알림 전체 읽음 처리 함수
+        function markAllNotificationsAsRead() {
+            $.post(`/api/mark-all-notifications-as-read/${userId}`)
+                .done(function(response) {
+                    alert(response); // 성공 메시지 출력
+                    // 서버 응답에 따라 적절한 처리를 수행할 수 있습니다.
+                    // 예를 들어 알림 목록을 다시 가져와서 업데이트하는 등의 작업을 수행할 수 있습니다.
+                })
+                .fail(function(response) {
+                    alert(response); // 오류 메시지 출력
+                });
+        }
 
     });
 
