--- a/src/main/resources/templates/createPost.html
+++ b/src/main/resources/templates/createPost.html
@@ -264,6 +264,15 @@
             background-color: #d6d6d6;
         }
 
+        .mark-all-read-button {
+            position: absolute;
+            top: 10px; /* 버튼 위치 조정 */
+            right: 10px; /* 버튼 위치 조정 */
+            padding: 1px 4px;
+            font-size: 12px;
+            z-index: 9999; /* 다른 요소보다 앞에 표시되도록 설정 */
+        }
+
     </style>
 </head>
 <body>
