--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -28,8 +28,7 @@
 <div>
     <a href="/">
         <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" alt="Button Icon" style="
-    width: 70px;
-">
+    width: 70px; cursor: pointer;">
     </a>
 </div>
 
