[ADD]: 첨부파일 취소 버튼 생성 [REFECTOR]: boards.html 로그아웃 경로 변경

--- a/src/main/resources/templates/boards.html
+++ b/src/main/resources/templates/boards.html
@@ -1079,7 +1079,7 @@
             success: function (data) {
                 removeToken();
                 alert("로그아웃 성공");
-                window.location.reload();
+                window.location.href="/main";
             },
             error: function () {
                 alert("로그아웃 실패");
