--- a/src/main/resources/templates/createPost.html
+++ b/src/main/resources/templates/createPost.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
 
     <!-- 로고 -->
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" />
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png"/>
 
     <style>
         @font-face {
@@ -31,7 +31,7 @@
         }
 
         * {
-            font-family : 'TheJamsil5Bold', cursive;
+            font-family: 'TheJamsil5Bold', cursive;
         }
 
         html, body {
@@ -153,6 +153,7 @@
             z-index: 10;
             margin-top: 45px; /* 헤더의 높이만큼 여백 추가 */
         }
+
         .notification-list-header {
             background-color: #ccc;
             padding: 10px;
@@ -163,12 +164,14 @@
             width: 13%; /* 가로 너비를 꽉 채우도록 설정 */
             z-index: 9998; /* 헤더 위에 배치 */
         }
+
         .notification-list-item {
             padding: 10px;
             border-bottom: 1px solid #ddd;
             cursor: pointer;
             background-color: white;
         }
+
         .notification-list-item.read {
             background-color: #f0f0f0;
         }
@@ -178,7 +181,7 @@
             cursor: pointer;
         }
 
-        .offcanvas{
+        .offcanvas {
             background-color: #f5f5fa;
         }
 
@@ -204,7 +207,7 @@
             align-items: center;
         }
 
-        .form-group{
+        .form-group {
             margin-top: 10px;
             margin-bottom: 10px;
             width: 100%;
@@ -249,7 +252,7 @@
             resize: none;
         }
 
-        .submit-button{
+        .submit-button {
             margin-top: 10px;
             background-color: #e9e9e9;
             color: #1a1515;
@@ -260,7 +263,7 @@
             font-size: 14px;
         }
 
-        .submit-button:hover{
+        .submit-button:hover {
             background-color: #d6d6d6;
         }
 
@@ -281,7 +284,8 @@
     </div>
     <div class="middle">
         <!-- 가운데 코끼리 글씨 및 로고  -->
-        <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" style="width: 35px; height: 35px; cursor: pointer" onclick="gotoMain()"> <!-- 로고 이미지 추가 -->
+        <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png"
+             style="width: 35px; height: 35px; cursor: pointer" onclick="gotoMain()"> <!-- 로고 이미지 추가 -->
         <div style="text-align: center; cursor:pointer;" onclick="gotoMain()">
             코끼리
         </div>
@@ -295,14 +299,18 @@
             </div>
         </div>
 
-        <div style="text-align: center;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
-            <img src="https://cdn-icons-png.flaticon.com/128/8212/8212733.png" style="width: 40px; height: 40px;"> <!-- 로고 이미지 추가 -->
+        <div style="text-align: center;" type="button" data-bs-toggle="offcanvas"
+             data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+            <img src="https://cdn-icons-png.flaticon.com/128/8212/8212733.png" style="width: 40px; height: 40px;">
+            <!-- 로고 이미지 추가 -->
         </div>
 
-        <div class="offcanvas offcanvas-start w-25" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-            <div class="offcanvas-header" style = "text-align: center; align-items:center;">
+        <div class="offcanvas offcanvas-start w-25" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+             aria-labelledby="offcanvasWithBothOptionsLabel">
+            <div class="offcanvas-header" style="text-align: center; align-items:center;">
                 <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">
-                    <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" style="width: 40px; height: 40px;"> <!-- 로고 이미지 추가 -->
+                    <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png"
+                         style="width: 40px; height: 40px;"> <!-- 로고 이미지 추가 -->
                     코끼리
                 </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -310,17 +318,22 @@
 
             <div class="list-group list-group-flush">
                 <!-- 카테고리 버튼과 하위 메뉴 -->
-                <button class="list-group-item list-group-item-action" data-bs-toggle="collapse" data-bs-target="#categoryMenu">게시판 카테고리</button>
+                <button class="list-group-item list-group-item-action" data-bs-toggle="collapse"
+                        data-bs-target="#categoryMenu">게시판 카테고리
+                </button>
                 <div id="categoryMenu" class="collapse">
-                    <a href="/api/posts/categories/1" class="list-group-item list-group-item-action mini-list">협업 인원 모집</a>
-                    <a href="/api/posts/categories/2" class="list-group-item list-group-item-action mini-list">스티디원 모집</a>
+                    <a href="/api/posts/categories/1" class="list-group-item list-group-item-action mini-list">협업 인원
+                        모집</a>
+                    <a href="/api/posts/categories/2" class="list-group-item list-group-item-action mini-list">스티디원
+                        모집</a>
                     <a href="/api/posts/categories/3" class="list-group-item list-group-item-action mini-list">문제은행</a>
                     <a href="/api/posts/categories/4" class="list-group-item list-group-item-action mini-list">자유게시판</a>
                 </div>
 
                 <a href="/api/view/users" class="list-group-item list-group-item-action">마이페이지</a>
                 <a href="/api/boards" class="list-group-item list-group-item-action">프로젝트 페이지</a>
-                <a href="/api/view/admins" class="list-group-item list-group-item-action" th:if="${admin}">관리자 페이지</a> <!--서버에서 admin 여부 true/false로 가져오기-->
+                <a href="/api/view/admins" class="list-group-item list-group-item-action" th:if="${admin}">관리자 페이지</a>
+                <!--서버에서 admin 여부 true/false로 가져오기-->
 
 
             </div>
@@ -354,10 +367,14 @@
                 <input type="text" id="title" name="title" class="input-field" placeholder="제목을 입력하세요">
             </div>
 
+
             <div class="form-group">
                 <label for="files">첨부 파일</label>
-                <input type="file" id="files" name="files" class="input-field">
+                    <input type="file" id="files" name="files" class="input-field">
+                    <button id="clear-files-button" style="font-size: 15px;  white-space: nowrap;">첨부 파일 취소</button>
+
             </div>
+
 
             <div class="form-group">
                 <label for="content">내용</label>
@@ -373,6 +390,12 @@
 
 <script>
 
+    //첨부한 이미지 취소 버튼
+    document.getElementById('clear-files-button').addEventListener('click', function () {
+        var fileInput = document.getElementById('files');
+        fileInput.value = ''; // 파일 입력 필드의 값 초기화
+    });
+
     function gotoMain() {
         window.location.href = "/main";
     }
@@ -384,7 +407,6 @@
             var title = $("#title").val();
             var content = $("#content").val();
             var files = $("#files")[0].files[0];
-
 
 
             console.log(files);
@@ -453,7 +475,7 @@
 </script>
 </body>
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         pageSetting();
 
         const notificationIcon = document.querySelector('.notification-icon');
@@ -519,7 +541,7 @@
 
             // "전체 읽음" 버튼에 이벤트 리스너 연결
             const button = document.getElementById('markAllReadButton');
-            button.addEventListener('click', function() {
+            button.addEventListener('click', function () {
                 const confirmResult = confirm('알림 전체 읽음처리 하시겠습니까?');
                 if (confirmResult) {
                     // 확인을 선택한 경우 서버에 요청 보내기
@@ -591,11 +613,11 @@
             const unreadCount = notificationsList.filter(notification => !notification.read).length;
             if (unreadCount > 0) {
                 notificationIcon.classList.add('new-notification');
-                notificationBadge.style.display="inline";
+                notificationBadge.style.display = "inline";
                 notificationBadge.innerText = unreadCount.toString();
             } else {
                 notificationIcon.classList.remove('new-notification');
-                notificationBadge.style.display="none";
+                notificationBadge.style.display = "none";
                 // notificationBadge.innerText = '';
             }
         };
@@ -643,18 +665,17 @@
         // 알림 전체 읽음 처리 함수
         function markAllNotificationsAsRead() {
             $.post(`/api/mark-all-notifications-as-read/${userId}`)
-                .done(function(response) {
+                .done(function (response) {
                     alert(response); // 성공 메시지 출력
                     // 서버 응답에 따라 적절한 처리를 수행할 수 있습니다.
                     // 예를 들어 알림 목록을 다시 가져와서 업데이트하는 등의 작업을 수행할 수 있습니다.
                 })
-                .fail(function(response) {
+                .fail(function (response) {
                     alert(response); // 오류 메시지 출력
                 });
         }
 
     });
-
 
 
     function removeToken() { // 토큰 삭제
@@ -691,7 +712,7 @@
         const logoutBtn = document.getElementById('logout');
         const keeploginBtn = document.getElementById('keeplogin');
 
-        if(!token) {
+        if (!token) {
             loginBtn.style.display = "inline-block";
             logoutBtn.style.display = "none";
             keeploginBtn.style.display = "none";
