--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -18,8 +18,15 @@
 
   <title>코끼리</title>
   <style>
+    @font-face {
+      font-family: 'GangwonState';
+      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
+      font-weight: normal;
+      font-style: normal;
+    }
+
     * {
-      font-family: 'Orbit', sans-serif;
+      font-family: 'GangwonState', cursive;
     }
 
     html, body {
