--- a/src/main/resources/templates/backUsers.html
+++ b/src/main/resources/templates/backUsers.html
@@ -32,14 +32,14 @@
 
         /* 상단바 css 추가 */
         @font-face {
-            font-family: 'TheJamsil5Bold';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2') format('woff2');
-            font-weight: 700;
+            font-family: 'GangwonState';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
+            font-weight: normal;
             font-style: normal;
         }
 
         * {
-            font-family: 'TheJamsil5Bold', cursive;
+            font-family: 'GangwonState', cursive;
         }
 
         html, body {
