--- a/src/main/resources/templates/boards.html
+++ b/src/main/resources/templates/boards.html
@@ -23,14 +23,14 @@
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" />
     <style>
         @font-face {
-            font-family: 'TheJamsil5Bold';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2') format('woff2');
-            font-weight: 500;
+            font-family: 'GangwonState';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
+            font-weight: normal;
             font-style: normal;
         }
 
         * {
-            font-family : 'TheJamsil5Bold', cursive;
+            font-family: 'GangwonState', cursive;
         }
 
         html, body {
