--- a/src/main/resources/templates/cardCalendar.html
+++ b/src/main/resources/templates/cardCalendar.html
@@ -16,6 +16,17 @@
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" />
 
     <style>
+        @font-face {
+            font-family: 'GangwonState';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        * {
+            font-family: 'GangwonState', cursive;
+        }
+
         html, body {
             margin: 0;
             padding: 0;
